<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="text_input" type="id"/>
</resources>