<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    tools:context=".features.home.MainActivity">

    <include layout="@layout/stub_category_list_empty"/>

    <include layout="@layout/stub_category_list"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_create_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:contentDescription="@string/category_list_content_fab"
        android:tint="@android:color/white"
        app:srcCompat="@drawable/ic_add_black_24dp"/>

</android.support.design.widget.CoordinatorLayout>